newsletter: many changes to the subscribe / unsubscribe / register text, a few optimizations. strings added, changing/deleting strings in "NewStrings" added. newsletter text changed at bottom for unsubscribe.

--- a/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/ConfirmEmailLandingPanel.html
+++ b/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/ConfirmEmailLandingPanel.html
@@ -21,12 +21,14 @@
         </h1>
 
         <p wicket:id="now-subscribed">
-            (insert email) is now subscribed to the PhET newsletter.
+            Thank you for subscribing to the PhET newsletter! Your subscription is now complete.
         </p>
 
         <p wicket:id="now-registered">
-            Thank you for registering! In a few seconds you will be redirected to your original page.
+            Thank you for registering! You account is now active.
         </p>
+
+        <p wicket:id="redirection">In a few seconds, you will be redirected to your original page.</p>
     </div>
 </wicket:panel>
 
