--- a/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/ConfirmEmailSentPanel.html
+++ b/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/ConfirmEmailSentPanel.html
@@ -18,13 +18,15 @@
         </h1>
 
         <p wicket:id="toFinish">
-            To finish creating your account, we've sent a confirmation email to @EMAIL@. In the Email, please click on
-            the link or copy and paste it into a browser in order to confirm your email.
+            Thank you for subscribing. An e-mail has been sent to @EMAIL@.
+        </p>
+
+        <p wicket:id="pleaseCheck">
+            Please check your e-mail and click on the link to complete your newsletter subscription.
         </p>
 
         <p wicket:id="trouble">
-            If you don't receive the email momentarily, please make sure your email filter allows emails sent from
-            @PHETHELP@. For additional help, please email @PHETHELP@.
+            For help, please email @PHETHELP@.
         </p>
     </div>
 </wicket:panel>
