--- a/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/InitialSubscribePanel.html
+++ b/trunk/web/wicket-website/src/java/edu/colorado/phet/website/newsletter/InitialSubscribePanel.html
@@ -18,13 +18,7 @@
         </h1>
 
         <p wicket:id="pleaseSignUp">
-            Please sign up if you would like to receive the PhET Newsletter. Once you have submitted your email address,
-            you should receive a confirmation of your subscription via email.
-        </p>
-
-        <p wicket:id="pastEditions">
-            <a href="#">Here are some past editions</a> of the PhET Newsletter to give you an idea of what you will
-            receive.
+            Please sign up if you would like to receive the PhET Quarterly Newsletter. 
         </p>
 
         <wicket:enclosure child="feedback">
