--- a/trunk/web/wicket-website/assets/newsletter-templates/email/newsletter.html
+++ b/trunk/web/wicket-website/assets/newsletter-templates/email/newsletter.html
@@ -194,9 +194,7 @@
                 <tr>
                     <td colspan="5" style="background-color: #fff; text-align: center;">
                         <p style="font-size: 12px; color: #888888; margin: 0; padding: 20px 20px 0;">
-                            You received this e-mail because you signed up at our website or emailed us at
-                            <a style="font-size: 12px; color: #888888" href="mailto:phethelp@colorado.edu">phethelp@colorado.edu</a>.
-                            To opt out of these newsletters, please click on this link:
+                            To opt out of PhET newsletters, please click on this link:
                             <a style="font-size: 12px; color: #888888"
                                href="@UNSUBSCRIBE@">@UNSUBSCRIBE@</a>
                             or copy and paste the text into your browser.
