--- a/web/wicket-website/assets/newsletter-templates/email/newsletter.html
+++ b/web/wicket-website/assets/newsletter-templates/email/newsletter.html
@@ -13,18 +13,18 @@
                     <td colspan="5">
                         <table width="830" cellpadding="0" cellspacing="0" border="0">
                             <tr>
-                                <td width="242" height="118" style="margin: 0; padding: 0;"><img
+                                <td width="242" height="118" style="margin: 0; padding: 0;"><a href="http://phet.colorado.edu"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-logo.png"
-                                        alt="PhET Logo" width="242" height="118"/></td>
+                                        alt="PhET Logo" width="242" height="118" style="border: none;"/></a></td>
                                 <td width="94" height="118" style="margin: 0; padding: 0;"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer.png"
-                                        alt="" width="94" height="118"/></td>
-                                <td width="400" height="118" style="margin: 0; padding: 0;"><img
+                                        alt="" width="94" height="118" style="border: none;"/></td>
+                                <td width="400" height="118" style="margin: 0; padding: 0;"><a href="http://phet.colorado.edu"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-winter.png"
-                                        alt="Winter 2010 Newsletter" width="400" height="118"/></td>
+                                        alt="Winter 2010 Newsletter" width="400" height="118" style="border: none;"/></a></td>
                                 <td width="94" height="118" style="margin: 0; padding: 0;"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer-dark.png"
-                                        alt="" width="94" height="118"/></td>
+                                        alt="" width="94" height="118" style="border: none;"/></td>
                             </tr>
                         </table>
                     </td>
