--- a/trunk/web/wicket-website/assets/newsletter-templates/email/newsletter.html
+++ b/trunk/web/wicket-website/assets/newsletter-templates/email/newsletter.html
@@ -11,17 +11,29 @@
             <table width="830" cellpadding="0" cellspacing="0" border="0">
                 <tr>
                     <td colspan="5">
+                        <div style="padding-bottom: 10px;">
+                            <a href="http://phet.colorado.edu/newsletters/2010-winter/newsletter-2010-winter.html"
+                               style="color: #888888;">Please click here if the e-mail below is not displayed
+                                correctly.</a>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="5">
                         <table width="830" cellpadding="0" cellspacing="0" border="0">
                             <tr>
-                                <td width="242" height="118" style="margin: 0; padding: 0;"><a href="http://phet.colorado.edu"><img
+                                <td width="242" height="118" style="margin: 0; padding: 0;"><a
+                                        href="http://phet.colorado.edu"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-logo.png"
                                         alt="PhET Logo" width="242" height="118" style="border: none;"/></a></td>
                                 <td width="94" height="118" style="margin: 0; padding: 0;"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer.png"
                                         alt="" width="94" height="118" style="border: none;"/></td>
-                                <td width="400" height="118" style="margin: 0; padding: 0;"><a href="http://phet.colorado.edu"><img
+                                <td width="400" height="118" style="margin: 0; padding: 0;"><a
+                                        href="http://phet.colorado.edu"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-winter.png"
-                                        alt="Winter 2010 Newsletter" width="400" height="118" style="border: none;"/></a></td>
+                                        alt="Winter 2010 Newsletter" width="400" height="118"
+                                        style="border: none;"/></a></td>
                                 <td width="94" height="118" style="margin: 0; padding: 0;"><img
                                         src="http://phet.colorado.edu/newsletters/2010-winter/email/header-spacer-dark.png"
                                         alt="" width="94" height="118" style="border: none;"/></td>
