website: changed language sim page text to "Simulations not yet translated into {0}"

--- a/trunk/web/wicket-website/src/java/edu/colorado/phet/website/content/simulations/TranslationListPanel.html
+++ b/trunk/web/wicket-website/src/java/edu/colorado/phet/website/content/simulations/TranslationListPanel.html
@@ -39,10 +39,8 @@
             </tr>
         </table>
         <wicket:enclosure child="untranslated-list">
-            <h3>
-                <wicket:message key="simulations.translated.untranslated">
-                    Untranslated Simulations
-                </wicket:message>
+            <h3 wicket:id="untranslated-header">
+                Simulations not yet translated into {0}
             </h3>
             <ul>
                 <li wicket:id="untranslated-list">
